navigation and archive

--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,8 @@
 ---
-layout: layouts/home.njk
+layout: layouts/telesthesia-base.njk
 ---
 
-<h1>Telesthesia Institute</h1>
+
+<a href="/map">Map</a>
+<a href="/viewings">Viewings</a>
+<a href="/statistics">Statistics</a>
