--- a/index.njk
+++ b/index.njk
@@ -2,7 +2,18 @@
 layout: layouts/telesthesia-base.njk
 ---
 
+<div class="main-nav">
+    <div class="main-nav__item">
+        <a href="/map">Map</a>
+    </div>
 
-<a href="/map">Map</a>
-<a href="/viewings">Viewings</a>
-<a href="/statistics">Statistics</a>
+    <div class="main-nav__item">
+        <a href="/viewings">Viewings</a>
+    </div>
+
+    <div class="main-nav__item">
+        <a href="/statistics">Statistics</a>
+    </div>
+
+
+    </div>
