--- a/index.njk
+++ b/index.njk
@@ -3,17 +3,26 @@ layout: layouts/telesthesia-base.njk
 ---
 
 <div class="main-nav">
-    <div class="main-nav__item">
-        <a href="/map">Map</a>
-    </div>
+    <a href="/map">
+        <div class="main-nav__item">
+            <h2>Map</h2>
+            <p>Click on the map to see the thing</p>
+        </div>
+    </a>
 
-    <div class="main-nav__item">
-        <a href="/viewings">Viewings</a>
-    </div>
+    <a href="/viewings">
+        <div class="main-nav__item">
+            <h2>Viewings</h2>
+            <p>Read the viewings</p>
+        </div>
+    </a>
 
-    <div class="main-nav__item">
-        <a href="/statistics">Statistics</a>
-    </div>
+    <a href="/statistics">
+        <div class="main-nav__item">
+            <h2>Statistics</h2>
+            <p>See the stats</p>
+        </div>
+    </a>
 
 
     </div>
