--- a/index.njk
+++ b/index.njk
@@ -5,21 +5,21 @@ layout: layouts/telesthesia-base.njk
 <div class="main-nav">
     <a href="/map">
         <div class="main-nav__item">
-            <h2>Map</h2>
+            <h2><span>Map</span></h2>
             <p>Click on the map to see the thing</p>
         </div>
     </a>
 
     <a href="/viewings">
         <div class="main-nav__item">
-            <h2>Viewings</h2>
+            <h2><span>Viewings</span></h2>
             <p>Read the viewings</p>
         </div>
     </a>
 
     <a href="/statistics">
         <div class="main-nav__item">
-            <h2>Statistics</h2>
+            <h2><span>Statistics</span></h2>
             <p>See the stats</p>
         </div>
     </a>
