--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -3,263 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/telesthesia.css">
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap" rel="stylesheet">
 <style> @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap'); </style>
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: 'Martian Mono', monospace;
-            background: #194146;
-        }
-
-body::before {
-    content: '';
-    display: block;
-    z-index: 1;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
-    pointer-events: none;
-}
-
-        html, body, main, #map, #mapcontainer {
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-        #map {
-          z-index:0;
-          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
-          filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
-          background: #194146;
-
-        }
-        #map::after {
-            content: "";
-  background-image: radial-gradient(#4d5e69 1px, transparent 0);
-  background-size: 40px 40px;
-  background-position: -19px -19px;
-  width: 100%;
-  height: 100vh;
-  z-index: 9999;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.5;
-        }
-
-#data-container {
- position: fixed;
-    top: 40px;
-    right: 40px;
-    width: 180px;
-}
-
-.panel, .carousel-item {
-    min-height: 20px;
-    background-color: rgba(0, 0, 29, 0.3);
-    z-index: 1;
-    padding: 20px;
-    /* display: flex; */
-    font-size: 12px;
-    border: 1px solid #20dfdf;
-}
-
-  #console {
-   
-    }
-
-          #console__image {
-        flex: 0 0 20%; /* Set the flex basis to 20% and allow the element to shrink or grow */
-        max-width: 100%; /* Set a maximum width of 100px */
-      }
-       #console__image img {
-       max-width: 100%;}
-       
-       #console__text, .carousel-item {
-        flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
-        color: #21f9f9;
-        line-height: 18px;
-    font-size: 11px;
-       }
-
-#console__text span {
-    display:block;
-}
-
-      #console__text span:first-of-type {
-  color: white;
-}
-
-
-  #console::before {
-    content: "Telesthesia:";
-    display: block;
-    position: absolute;
-    top: -8px;
-    left: 10px;
-    color: #20dfdf;
-    background: #194146;
-    padding: 2px 5px;
-}
-
-        #mapcontainer {
-
-        }
-main {
-  border: 15px solid #194146;
-    box-sizing: border-box;
-}
-
-.marker {
-    width: 13px;
-    height: 13px;
-    background: #00ffb2;
-    border-radius: 50%;
-}
-/*
-.marker::after {
-  content: "";
-  display: block;
-  border: 2px solid white;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-*/
-#log {
-        position: absolute;
-    bottom: 50px;
-    left: 30px;
-    color: #fff;
-    font-size: 7px;
-    line-height: 3px;
-    text-shadow: 2px 2px #000000;
-}
-
-      /**
- * termynal.js
- *
- * @author Ines Montani <ines@ines.io>
- * @version 0.0.1
- * @license MIT
- */
-
-:root {
-    --color-bg: #252a33;
-    --color-text: #eee;
-    --color-text-subtle: #a2a2a2;
-}
-
-[data-termynal]:before {
-    content: '';
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    display: none;
-}
-
-[data-termynal]:after {
-    position: absolute;
-    top: 5px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-}
-
-[data-ty] {
-    display: block;
-    line-height: 2;
-}
-
-[data-ty]:before {
-    content: '';
-    display: inline-block;
-    vertical-align: middle;
-    display: none;
-}
-
-[data-ty="input"]:before,
-[data-ty-prompt]:before {
-    margin-right: 0.75em;
-    color: var(--color-text-subtle);
-}
-
-[data-ty][data-ty-prompt]:before {
-    content: attr(data-ty-prompt);
-}
-
-[data-ty-cursor]:after {
-    content: attr(data-ty-cursor);
-    font-family: monospace;
-    margin-left: 0.5em;
-    -webkit-animation: blink 1s infinite;
-            animation: blink 1s infinite;
-}
-
-/* Mobile */
-@media (max-width: 640px) {
-
-#data-container {
-    position: fixed;
-    bottom: 0;
-    top: auto;
-    right: 0;
-    width: 100%;
-    padding: 0;
-    z-index: 2;
-}
-
-#console__image {
-    max-width: 100%;
-    max-height: 150px;
-    overflow: hidden;
-}
-
-.panel {
-margin: 20px;
-background-color: rgba(0, 0, 29, 0.5);
-}
-
-body::before {
-box-shadow: 0 0 200px rgba(0,0,0,0.5) inset;
-}
-
-#console::before {
-top: 10px;
-left: 30px;
-    }
-
-}	
-
-
-/* Cursor animation */
-
-@-webkit-keyframes blink {
-    50% {
-        opacity: 0;
-    }
-}
-
-@keyframes blink {
-    50% {
-        opacity: 0;
-    }
-}
-    </style>
     
     </head>
   <body>
@@ -271,203 +20,7 @@ left: 30px;
     <footer></footer>
 
     <script>
-      /**
- * termynal.js
- * A lightweight, modern and extensible animated terminal window, using
- * async/await.
- *
- * @author Ines Montani <ines@ines.io>
- * @version 0.0.1
- * @license MIT
- */
-
-'use strict';
-
-/** Generate a terminal widget. */
-class Termynal {
-    /**
-     * Construct the widget's settings.
-     * @param {(string|Node)=} container - Query selector or container element.
-     * @param {Object=} options - Custom settings.
-     * @param {string} options.prefix - Prefix to use for data attributes.
-     * @param {number} options.startDelay - Delay before animation, in ms.
-     * @param {number} options.typeDelay - Delay between each typed character, in ms.
-     * @param {number} options.lineDelay - Delay between each line, in ms.
-     * @param {number} options.progressLength - Number of characters displayed as progress bar.
-     * @param {string} options.progressChar – Character to use for progress bar, defaults to █.
-	 * @param {number} options.progressPercent - Max percent of progress.
-     * @param {string} options.cursor – Character to use for cursor, defaults to ▋.
-     * @param {Object[]} lineData - Dynamically loaded line data objects.
-     * @param {boolean} options.noInit - Don't initialise the animation.
-     */
-    constructor(container = '#termynal', options = {}) {
-        this.container = (typeof container === 'string') ? document.querySelector(container) : container;
-        this.pfx = `data-${options.prefix || 'ty'}`;
-        this.startDelay = options.startDelay
-            || parseFloat(this.container.getAttribute(`${this.pfx}-startDelay`)) || 600;
-        this.typeDelay = options.typeDelay
-            || parseFloat(this.container.getAttribute(`${this.pfx}-typeDelay`)) || 90;
-        this.lineDelay = options.lineDelay
-            || parseFloat(this.container.getAttribute(`${this.pfx}-lineDelay`)) || 1500;
-        this.progressLength = options.progressLength
-            || parseFloat(this.container.getAttribute(`${this.pfx}-progressLength`)) || 40;
-        this.progressChar = options.progressChar
-            || this.container.getAttribute(`${this.pfx}-progressChar`) || '█';
-		this.progressPercent = options.progressPercent
-            || parseFloat(this.container.getAttribute(`${this.pfx}-progressPercent`)) || 100;
-        this.cursor = options.cursor
-            || this.container.getAttribute(`${this.pfx}-cursor`) || '▋';
-        this.lineData = this.lineDataToElements(options.lineData || []);
-        if (!options.noInit) this.init()
-    }
-
-    /**
-     * Initialise the widget, get lines, clear container and start animation.
-     */
-    init() {
-        // Appends dynamically loaded lines to existing line elements.
-        this.lines = [...this.container.querySelectorAll(`[${this.pfx}]`)].concat(this.lineData);
-
-        /** 
-         * Calculates width and height of Termynal container.
-         * If container is empty and lines are dynamically loaded, defaults to browser `auto` or CSS.
-         */ 
-        const containerStyle = getComputedStyle(this.container);
-        this.container.style.width = containerStyle.width !== '0px' ? 
-            containerStyle.width : undefined;
-        this.container.style.minHeight = containerStyle.height !== '0px' ? 
-            containerStyle.height : undefined;
-
-        this.container.setAttribute('data-termynal', '');
-        this.container.innerHTML = '';
-        this.start();
-    }
-
-    /**
-     * Start the animation and rener the lines depending on their data attributes.
-     */
-    async start() {
-        await this._wait(this.startDelay);
-
-        for (let line of this.lines) {
-            const type = line.getAttribute(this.pfx);
-            const delay = line.getAttribute(`${this.pfx}-delay`) || this.lineDelay;
-
-            if (type == 'input') {
-                line.setAttribute(`${this.pfx}-cursor`, this.cursor);
-                await this.type(line);
-                await this._wait(delay);
-            }
-
-            else if (type == 'progress') {
-                await this.progress(line);
-                await this._wait(delay);
-            }
-
-            else {
-                this.container.appendChild(line);
-                await this._wait(delay);
-            }
-
-            line.removeAttribute(`${this.pfx}-cursor`);
-        }
-    }
-
-    /**
-     * Animate a typed line.
-     * @param {Node} line - The line element to render.
-     */
-    async type(line) {
-        const chars = [...line.textContent];
-        const delay = line.getAttribute(`${this.pfx}-typeDelay`) || this.typeDelay;
-        line.textContent = '';
-        this.container.appendChild(line);
-
-        for (let char of chars) {
-            await this._wait(delay);
-            line.textContent += char;
-        }
-    }
-
-    /**
-     * Animate a progress bar.
-     * @param {Node} line - The line element to render.
-     */
-    async progress(line) {
-        const progressLength = line.getAttribute(`${this.pfx}-progressLength`)
-            || this.progressLength;
-        const progressChar = line.getAttribute(`${this.pfx}-progressChar`)
-            || this.progressChar;
-        const chars = progressChar.repeat(progressLength);
-		const progressPercent = line.getAttribute(`${this.pfx}-progressPercent`)
-			|| this.progressPercent;
-        line.textContent = '';
-        this.container.appendChild(line);
-
-        for (let i = 1; i < chars.length + 1; i++) {
-            await this._wait(this.typeDelay);
-            const percent = Math.round(i / chars.length * 100);
-            line.textContent = `${chars.slice(0, i)} ${percent}%`;
-			if (percent>progressPercent) {
-				break;
-			}
-        }
-    }
-
-    /**
-     * Helper function for animation delays, called with `await`.
-     * @param {number} time - Timeout, in ms.
-     */
-    _wait(time) {
-        return new Promise(resolve => setTimeout(resolve, time));
-    }
-
-    /**
-     * Converts line data objects into line elements.
-     * 
-     * @param {Object[]} lineData - Dynamically loaded lines.
-     * @param {Object} line - Line data object.
-     * @returns {Element[]} - Array of line elements.
-     */
-    lineDataToElements(lineData) {
-        return lineData.map(line => {
-            let div = document.createElement('div');
-            div.innerHTML = `<span ${this._attributes(line)}>${line.value || ''}</span>`;
-
-            return div.firstElementChild;
-        });
-    }
-
-    /**
-     * Helper function for generating attributes string.
-     * 
-     * @param {Object} line - Line data object.
-     * @returns {string} - String of attributes.
-     */
-    _attributes(line) {
-        let attrs = '';
-        for (let prop in line) {
-            attrs += this.pfx;
-
-            if (prop === 'type') {
-                attrs += `="${line[prop]}" `
-            } else if (prop !== 'value') {
-                attrs += `-${prop}="${line[prop]}" `
-            }
-        }
-
-        return attrs;
-    }
-}
-
-/**
-* HTML API: If current script has container(s) specified, initialise Termynal.
-*/
-if (document.currentScript.hasAttribute('data-termynal-container')) {
-    const containers = document.currentScript.getAttribute('data-termynal-container');
-    containers.split('|')
-        .forEach(container => new Termynal(container))
-}
+    
     </script>
 
     <!-- Current page: {{ page.url | url }} -->
