--- a/map.njk
+++ b/map.njk
@@ -3,8 +3,8 @@ layout: layouts/telesthesia-base.njk
 ---
 
 <ul class="Layers">
-  <li>viewings</li>
-  <li>stats</li>
+  <li><button data-layer="viewings">viewings</button></li>
+  <li><button data-layer="stats">stats</button></li>
 </ul>
 
     <!-- Create a div element to hold the map -->
