--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -52,12 +52,21 @@ opacity: 0.5;
     justify-content: center;
     width: 400px;
     padding: 0;
+    z-index: 2;
   }
   
   .Layers li {
     display: inline-block;
     margin: 0 10px;
     list-style: none;
+  }
+
+  .viewings-visible .layer-button--viewings {
+    background: green;
+  }
+
+  .stats-visible .layer-button--stats {
+    background: green;
   }
   
 
