--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -69,7 +69,7 @@ opacity: 0.5;
     background: #20dfdf;
   }
 
-  #viewings-container, #stats-container  {
+  #viewingscontainer, #statscontainer  {
     display:none;
     background-color: white;
     min-width: 100px;
