--- a/map.njk
+++ b/map.njk
@@ -40,18 +40,20 @@ layout: layouts/telesthesia-base.njk
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
     <!-- Initialize the map -->
     <script>
-      const buttons = document.querySelectorAll('.Layers button');
+ const buttons = document.querySelectorAll('.Layers button');
 
 buttons.forEach(button => {
   button.addEventListener('click', () => {
     const layer = button.getAttribute('data-layer');
     const body = document.querySelector('body');
     
-    if (body.classList.contains(`${layer}-visible`)) {
-      body.classList.remove(`${layer}-visible`);
-    } else {
-      body.classList.add(`${layer}-visible`);
-    }
+    // remove any other [data-layer value]-visible classes from the body
+    const visibleClasses = Array.from(body.classList).filter(c => c.endsWith('-visible'));
+    visibleClasses.forEach(c => body.classList.remove(c));
+    
+    // add the [data-layer value]-visible class for the clicked button
+    body.classList.add(`${layer}-visible`);
   });
 });
+
       </script>
