--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -70,10 +70,16 @@ opacity: 0.5;
   }
 
   #viewingscontainer, #statscontainer  {
-    display:none;
+    display: none;
     background-color: white;
-    min-width: 100px;
-    min-height: 100px;
+    min-width: 300px;
+    max-width: 800px;
+    max-height: 100px;
+    padding: 20px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%)
   }
 
   .viewings-visible #viewingscontainer, .stats-visible #statscontainer  {
