--- a/map.njk
+++ b/map.njk
@@ -40,7 +40,7 @@ layout: layouts/telesthesia-base.njk
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
     <!-- Initialize the map -->
     <script>
- const buttons = document.querySelectorAll('.Layers button');
+const buttons = document.querySelectorAll('.Layers button');
 
 buttons.forEach(button => {
   button.addEventListener('click', () => {
@@ -49,11 +49,16 @@ buttons.forEach(button => {
     
     // remove any other [data-layer value]-visible classes from the body
     const visibleClasses = Array.from(body.classList).filter(c => c.endsWith('-visible'));
-    visibleClasses.forEach(c => body.classList.remove(c));
+    visibleClasses.forEach(c => {
+      if (c === `${layer}-visible`) {
+        body.classList.remove(c);
+      }
+    });
     
-    // add the [data-layer value]-visible class for the clicked button
-    body.classList.add(`${layer}-visible`);
+    // toggle the [data-layer value]-visible class for the clicked button
+    body.classList.toggle(`${layer}-visible`);
   });
 });
+
 
       </script>
