--- a/map.njk
+++ b/map.njk
@@ -3,8 +3,8 @@ layout: layouts/telesthesia-base.njk
 ---
 
 <ul class="Layers">
-  <li><button data-layer="viewings" class="layer-button layer-button--viewings">viewings</button></li>
-  <li><button data-layer="stats" class="layer-button layer-button--stats">stats</button></li>
+  <li><button id="viewings-button">Viewings</button></li>
+  <li><button id="stats-button">Stats</button></li>
 </ul>
 
     <!-- Create a div element to hold the map -->
@@ -23,42 +23,34 @@ layout: layouts/telesthesia-base.njk
 
     <div id="log"></div>
 
-    <div id="viewingscontainer">
-      <div>
-        Viewings
-      </div>
-    </div>
-
-        <div id="statscontainer">
-          <div>
-            stats
-          </div>
-        </div>
+    <div id="viewings-layer" class="Layer">Viewings Layer</div>
+<div id="stats-layer" class="Layer">Stats Layer</div>
 
     <!-- Include the Leaflet JavaScript file -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
 <script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
     <!-- Initialize the map -->
     <script>
-const buttons = document.querySelectorAll('.Layers button');
+const viewingsButton = document.getElementById('viewings-button');
+const statsButton = document.getElementById('stats-button');
+const viewingsLayer = document.getElementById('viewings-layer');
+const statsLayer = document.getElementById('stats-layer');
 
-buttons.forEach(button => {
-  button.addEventListener('click', () => {
-    const layer = button.getAttribute('data-layer');
-    const body = document.querySelector('body');
-    
-    // remove any other [data-layer value]-visible classes from the body
-    const visibleClasses = Array.from(body.classList).filter(c => c.endsWith('-visible'));
-    visibleClasses.forEach(c => {
-      if (c === `${layer}-visible`) {
-        body.classList.remove(c);
-      }
-    });
-    
-    // toggle the [data-layer value]-visible class for the clicked button
-    body.classList.toggle(`${layer}-visible`);
-  });
+viewingsButton.addEventListener('click', () => {
+  if (viewingsLayer.classList.contains('Layer-visible')) {
+    viewingsLayer.classList.remove('Layer-visible');
+  } else {
+    viewingsLayer.classList.add('Layer-visible');
+    statsLayer.classList.remove('Layer-visible');
+  }
 });
 
-
+statsButton.addEventListener('click', () => {
+  if (statsLayer.classList.contains('Layer-visible')) {
+    statsLayer.classList.remove('Layer-visible');
+  } else {
+    statsLayer.classList.add('Layer-visible');
+    viewingsLayer.classList.remove('Layer-visible');
+  }
+});
       </script>
