--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -43,51 +43,51 @@ left: 0;
 opacity: 0.5;
 }
 
-.Layers {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
+ 
+  .Layers {
+    position: absolute;
     top: 0;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translateX(-50%);
+    display: flex;
     width: 400px;
-    margin: 0 auto;
+    justify-content: space-between;
     padding: 0;
-    list-style: none;
-    z-index: 999;
+    margin: 0;
   }
   
   .Layers li {
-    margin: 0 10px;
+    list-style: none;
+    margin: 0;
+  }
+  
+  .Layers button {
+    border: none;
+    background: none;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .Layers button.active {
+    color: red;
   }
   
   .Layer {
     display: none;
     position: absolute;
-    top: 50%;
+    top: 100%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     padding: 20px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
   }
   
-  .Layer-visible {
+  .Layer.Layer-visible {
     display: block;
   }
-  
-  .Layers button {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #000;
-  }
-  
-  .Layers button.active {
-    background-color: #000;
-    color: #fff;
-  }
-    
+      
 
   #viewingscontainer, #statscontainer  {
     display: none;
