--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -76,11 +76,12 @@ opacity: 0.5;
   .Layer {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     padding: 20px;
     background-color: #fff;
+    z-index: 2;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
   }
   
