--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -46,7 +46,7 @@ opacity: 0.5;
  
   .Layers {
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
