--- a/css/telesthesia.css
+++ b/css/telesthesia.css
@@ -65,7 +65,7 @@ opacity: 0.5;
   .Layers button {
     border: none;
     background: none;
-    padding: 10px;
+    padding: 5px 10px;
     font-size: 16px;
     cursor: pointer;
 
