--- a/map.njk
+++ b/map.njk
@@ -3,7 +3,7 @@ layout: layouts/telesthesia-base.njk
 ---
 
   <ul class="Layers">
-    <li><button id="btnHide" class="active">Map</button></li>
+    <li><button id="btnMap" class="active">Map</button></li>
     <li><button id="btnViewings">Viewings</button></li>
     <li><button id="btnStats">Stats</button></li>
   </ul>
@@ -43,7 +43,6 @@ layout: layouts/telesthesia-base.njk
     <script>
 const btnViewings = document.getElementById('btnViewings');
 const btnStats = document.getElementById('btnStats');
-const btnHide = document.getElementById('btnHide');
 const btnMap = document.getElementById('btnMap');
 
 btnViewings.addEventListener('click', () => {
@@ -66,30 +65,25 @@ btnStats.addEventListener('click', () => {
   btnMap.classList.remove('active');
 });
 
-btnHide.addEventListener('click', () => {
-  document.getElementById('viewings').style.display = 'none';
-  document.getElementById('stats').style.display = 'none';
+btnMap.addEventListener('click', () => {
+  // toggle display of viewings and stats
+  const viewings = document.getElementById('viewings');
+  const stats = document.getElementById('stats');
+  viewings.style.display = viewings.style.display === 'none' ? 'block' : 'none';
+  stats.style.display = stats.style.display === 'none' ? 'block' : 'none';
 
   // remove active class from all buttons
   btnViewings.classList.remove('active');
   btnStats.classList.remove('active');
   btnMap.classList.remove('active');
 
-  // add active class to btnHide
-  btnHide.classList.add('active');
-});
-
-// add click event to Map button to remove active class from all other buttons
-btnMap.addEventListener('click', () => {
-  document.getElementById('viewings').style.display = 'none';
-  document.getElementById('stats').style.display = 'none';
-
-  // remove active class from all buttons
-  btnViewings.classList.remove('active');
-  btnStats.classList.remove('active');
-  btnHide.classList.remove('active');
-
-  // add active class to btnMap
-  btnMap.classList.add('active');
+  // add active class to btnMap if both viewings and stats are hidden, otherwise add to the appropriate button
+  if (viewings.style.display === 'none' && stats.style.display === 'none') {
+    btnMap.classList.add('active');
+  } else if (viewings.style.display === 'block') {
+    btnViewings.classList.add('active');
+  } else if (stats.style.display === 'block') {
+    btnStats.classList.add('active');
+  }
 });
       </script>
