--- a/map.njk
+++ b/map.njk
@@ -48,7 +48,6 @@ const btnMap = document.getElementById('btnMap');
 btnViewings.addEventListener('click', () => {
   document.getElementById('viewings').style.display = 'block';
   document.getElementById('stats').style.display = 'none';
-  document.getElementById('map').style.display = 'none';
 
   // add active class to btnViewings and remove from others
   btnViewings.classList.add('active');
@@ -59,7 +58,6 @@ btnViewings.addEventListener('click', () => {
 btnStats.addEventListener('click', () => {
   document.getElementById('stats').style.display = 'block';
   document.getElementById('viewings').style.display = 'none';
-  document.getElementById('map').style.display = 'none';
 
   // add active class to btnStats and remove from others
   btnStats.classList.add('active');
@@ -83,5 +81,8 @@ btnMap.addEventListener('click', () => {
 
 // set initial active button to Map
 btnMap.classList.add('active');
+
+// ensure map layer is always visible
+document.getElementById('map').style.display = 'block';
 
       </script>
