--- a/new.njk
+++ b/new.njk
@@ -96,6 +96,7 @@ layout: layouts/telesthesia-base.njk
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
   }
 
   .main.menu-open {
@@ -104,6 +105,7 @@ layout: layouts/telesthesia-base.njk
 
   .secondary.menu-open {
     transform: translateX(-100%);
+    right: 0;
   }
 }
 
