--- a/new.njk
+++ b/new.njk
@@ -63,6 +63,12 @@ button:hover {
 .content,
 .content-inner {
   position: relative;
+
+
+  height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display:block;
 }
 
 .container {
